# advent-of-code

advent2020/: Day14.cs  Program.cs  day1.ts  day10.ts  day11.ts  day12.ts  day13-input1.txt  day13-test.ts  day13.ts  day15-input1.txt  day15.ts  day2.ts  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts  helper.ts  log.txt  package.json  thunk.ts
advent2021/: Day1.fs  Day2.fs  Day3.fs  Day4.fs  Day5.fs  Program.fs  Read.fs  Utils.fs  advent2021.fsproj
advent2022/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day5menhir.ml  day5menhir.mly  day6.ml  dune  dune-project
advent2022/day7/: day7.ml  day7ast.ml  day7lexer.mll  day7parser.mly  dune  dune-project  ti7_simple.txt
